<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: OrionOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/notifications_title" >

    <PreferenceCategory
        android:key="general_category"
        android:title="@string/general_category_title"
        android:summary="@string/general_category_summary" >

        <Preference
            android:key="heads_up_notifications"
            android:summary="@string/heads_up_notifications_summary"
            android:title="@string/heads_up_notifications_title"
            android:fragment="com.orion.support.fragment.HeadsUpSettings"/>

        <com.orion.support.preferences.SystemPropertySwitchPreference
            android:key="persist.sys.compact_heads_up_notification.always_show"
            android:title="@string/compact_heads_up_notifications_enabled_title"
            android:summary="@string/compact_heads_up_notifications_enabled_summary"
            android:defaultValue="false" />

        <com.orion.support.preferences.SystemSettingSwitchPreference
            android:key="small_landscape_notification"
            android:title="@string/small_landscape_notification_title"
            android:summary="@string/small_landscape_notification_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="island_notifications_category"
        android:title="@string/island_notifications_category_title" >

        <Preference
            android:key="island_notification"
            android:title="@string/island_notification_title"
            android:summary="@string/island_notification_summary"
            android:fragment="com.orion.support.fragment.IslandSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pulse_ambient_edge_light_category"
        android:title="@string/pulse_ambient_edge_light_category_title" >

        <Preference
            android:key="ambient_edge_light"
            android:title="@string/ambient_edge_light_title"
            android:summary="@string/ambient_edge_light_summary"
            android:fragment="com.orion.support.fragment.AmbientEdgeLightSettings"
            settings:controller="com.orion.support.fragment.AmbientEdgeLightPreferenceController"
            settings:requiresConfig="@bool/config_show_ambient_edge_light" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="ongoing_chip_category"
        android:title="@string/ongoing_chip_category_title" >

        <Preference
            android:key="ongoing_progress_settings"
            android:title="@string/ongoing_progress_settings_title"
            android:summary="@string/ongoing_progress_settings_summary"
            android:fragment="com.orion.support.fragment.OngoingProgressBar" />

    </PreferenceCategory>

</PreferenceScreen>
