<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: OrionOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qs_title" >

    <PreferenceCategory
        android:key="brightness_category"
        android:title="@string/brightness_category_title" >

	    <com.orion.support.preferences.SystemSettingListPreference
            android:key="qs_show_brightness"
            android:title="@string/qs_show_brightness_title"
            android:entries="@array/qs_show_brightness_entries"
            android:entryValues="@array/qs_show_brightness_values"
            android:defaultValue="1" />

        <com.orion.support.preferences.SystemSettingSwitchPreference
            android:key="qs_brightness_position_bottom"
            android:title="@string/qs_brightness_position_position_title"
            android:summary="@string/qs_brightness_position_position_summary" 
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/qs_header_image_title">

        <Preference
            android:key="qs_header_image"
            android:title="@string/qs_header_image_title"
            android:summary="@string/qs_header_image_summary"
            android:fragment="com.orion.support.fragment.QsHeaderImageSettings" />
    </PreferenceCategory>

</PreferenceScreen>
