<?xml version="1.0" encoding="utf-8"?>
<!--
 * SPDX-FileCopyrightText: DerpFest AOSP
 * SPDX-FileCopyrightText: OrionOS Project
 * SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misc_title" >

    <PreferenceCategory
        android:title="@string/general_category_title"
        android:summary="@string/general_category_summary">

        <com.orion.support.preferences.GlobalSettingSwitchPreference
            android:key="window_ignore_secure"
            android:title="@string/ignore_window_secure_title"
            android:summary="@string/ignore_window_secure_summary"
            android:defaultValue="false" />

   </PreferenceCategory>

</PreferenceScreen>
