<?xml version="1.0" encoding="utf-8"?>
<!--
 * SPDX-FileCopyrightText: DerpFest AOSP
 * SPDX-FileCopyrightText: OrionOS Project
 * SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_title" >

    <com.orion.support.preferences.SystemSettingSwitchPreference
        android:key="hide_lockscreen_status_bar"
        android:title="@string/lockscreen_hide_status_bar_title"
        android:summary="@string/lockscreen_hide_status_bar_summary"
        android:defaultValue="false" />

    <com.orion.support.preferences.SystemSettingSwitchPreference
        android:key="auth_ripple_enabled"
        android:title="@string/enable_fingerprint_ripple_effect_title"
        android:summary="@string/enable_fingerprint_ripple_effect_summary"
        android:defaultValue="true" />

</PreferenceScreen>
